--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	<h1 align="center">
 		<font face="Lato" color="#017bf5" size="7">
-			BEAUTIFUL AND SIMPLE WEB PAGE
+			Sayan Saha
 		</font>
 	</h1>
 	<h3 align="center">
 		<font face="Lato" color="#000" size="5">
-			USING HTML ONLY (NO CSS USED)
+			A personal Blog
 		</font>
 	</h3>
 	<br />
