--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<font face="cinzel" size="4">
-			<a href="#">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="#">VIDEOS</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="#">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="#">BLOG</a>&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="#">CONTACT US</a>
+			<a href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="#">Research</a>&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="#">Music</a>&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="#">Blog</a>&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="#">About and Contact</a>
 		</font>
 	</h3>
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
