--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		beautiful and simple website using html only -- fullywrold web tutorials
+		Sayan Saha - a personal blog
 	</title>
 </head>
-<body background="tarantula-nebula-jwst.jpg" link="#000" alink="#017bf5" vlink="#000">
+<body background="tarantula-nebula-jwst.jpg" link="#fff" alink="#fff" vlink="#fff">
 	<br />
 	<h3 align="center">
 		<font face="Lato" size="6">LOGO</font>
@@ -24,19 +24,19 @@
 	</h3>
 	<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	<h1 align="center">
-		<font face="Lato" color="#017bf5" size="7">
+		<font face="Lato" color="#fff" size="7">
 			Sayan Saha
 		</font>
 	</h1>
 	<h3 align="center">
-		<font face="Lato" color="#000" size="5">
+		<font face="Lato" color="#fff" size="5">
 			A personal Blog
 		</font>
 	</h3>
 	<br />
 	<h3 align="center">
 	<a href="#">
-		<font face="Lato" color="#000">GET STARTED</font>
+		<font face="Lato" color="#fff">GET STARTED</font>
 	</a>&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="#">
 		<font face="Lato" color="#fff">SUBSCRIBE US</font>
