--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body background="tarantula-nebula-jwst.jpg" link="#fff" alink="#fff" vlink="#fff">
 	<br />
 	<h3 align="center">
-		<font face="Lato" size="6">LOGO</font>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -35,11 +34,11 @@
 	</h3>
 	<br />
 	<h3 align="center">
-	<a href="#">
-		<font face="Lato" color="#fff">GET STARTED</font>
+	<a href="https://sayancosmo21.wordpress.com">
+		<font face="Lato" color="#fff">Old Website</font>
 	</a>&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="#">
-		<font face="Lato" color="#fff">SUBSCRIBE US</font>
+		<font face="Lato" color="#fff">Subscribe</font>
 	</a>
 	</h3>
 </body>
