--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		Sayan Saha - a personal blog
 	</title>
 </head>
-<body background="tarantula-nebula-jwst.jpg" link="#fff" alink="#fff" vlink="#fff">
+<body background="tarantula-nebula-jwst.jpg">
 	<br />
 	<h3 align="center">
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
