--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</h3>
 	<br />
 	<h3 align="center">
-	<a href="https://sayancosmo21.wordpress.com">
+	<a href="https://sayancosmo21.wordpress.com"> target="_blank"
 		<font face="Lato" color="#fff">Old Website</font>
 	</a>&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="#">
