--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Sayan Saha</h1>
-							<p>a personal blog on research and topics of interest</p>
+							<p>cosmologist</p>
 						</div>
 
 					<!-- Nav -->
