--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">researcher</a> in<br />
+								<h2 class="alt">Hi! I'm <strong>Sayan</strong>, a <a href="http://html5up.net/license">researcher</a> in<br />
 								in theoratical and observational cosmology at <a href="http://html5up.net"></a>IISER Pune</h2>
 								<p>Cosmology is the study of the universe as a whole<br />
 								as a function of time and space.</p>
