updated index and image

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Sayan Saha</h1>
-							<p>cosmologist</p>
+							<h1 id="title">Cosmo-Blogs</h1>
+							<p>a personal blog on research <br />
+								and topics of interest</p>
 						</div>
 
 					<!-- Nav -->
@@ -58,16 +59,18 @@
 				<!-- Intro -->
 					<section id="top" class="one dark cover">
 						<div class="container">
+							<span class="image avatar48"><img src="images/tarantula-nebula-jwst.jpg" alt="" /></span>
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Sayan</strong>, a <a href="http://html5up.net/license">researcher</a> in<br />
-								in theoratical and observational cosmology at <a href="http://html5up.net"></a>IISER Pune</h2>
+								<h2 class="alt">Hi! I'm <strong>Sayan</strong>, and welcome to my personal blog page, where I rey to talk about <br />
+									various topics
+							        in theoratical and observational cosmology at in a non-technical way</h2>
 								<p>Cosmology is the study of the universe as a whole<br />
 								as a function of time and space.</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Let's get started</a>
 							</footer>
 
 						</div>
