--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
 			<div id="main">
 
 				<!-- Intro -->
-					<section id="top" class="one dark cover">
+					<section id="top" class="one dark cover"><img src="images/tarantula-nebula-jwst.jpg" alt=""
 						<div class="container">
-							<span class="image avatar48"><img src="images/tarantula-nebula-jwst.jpg" alt="" /></span>
 
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Sayan</strong>, and welcome to my personal blog page, where I rey to talk about <br />
