--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Sayan</strong>, and welcome to my personal blog page, where I rey to talk about <br />
+								<h2 class="alt">Hi! I'm <strong>Sayan</strong>, and welcome to my personal blog page, where I try to talk about 
 									various topics
 							        in theoratical and observational cosmology at in a non-technical way</h2>
 								<p>Cosmology is the study of the universe as a whole<br />
