--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div id="main">
 
 				<!-- Intro -->
-					<section id="top" class="one dark cover"><img src="images/tarantula-nebula-jwst.jpg" alt=""
+					<section id="top" class="one dark cover"><img src="images/tarantula-nebula-jwst.jpg"
 						<div class="container">
 
 							<header>
