fixed broken image in Intro

--- a/index.html
+++ b/index.html
@@ -59,24 +59,26 @@
 
 				<!-- Intro -->
 					<section id="top" class="one dark cover">
-						<div class="container">
+						<div class="container"><img src="images/tarantula-nebula-jwst.jpg"width="600" height="400">
+							
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Sayan</strong>, and welcome to my personal blog page, where I try to talk about 
+									various topics
+							        in theoratical and observational cosmology at in a non-technical way</h2>
+								<p>Cosmology is the study of the universe as a whole<br />
+								as a function of time and space.</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Let's get started</a>
 							</footer>
 
 						</div>
 					</section>
 
 				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+					<section id="portfolio" class="one dark cover">
 						<div class="container">
 
 							<header>
