--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#blogs" id="blogs-link"><span class="icon solid fa-th">Blogs</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
@@ -71,24 +71,23 @@
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Let's get started</a>
+								<a href="#blogs" class="button scrolly">Let's get started</a>
 							</footer>
 
 						</div>
 					</section>
 
 				<!-- Portfolio -->
-					<section id="portfolio" class="one dark cover">
+					<section id="blogs" class="one dark cover">
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Blogs</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>The universe is amazingly simple. It is so smooth looks exactly the same everywhere and 
+								every direction, if you zoom out enough. Although If you really pay attention tt has some exotic irregularites
+							Which contains the information about the very early stages afterthe Big-Bang</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -146,14 +145,13 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image"><img src="images/sayan_profile_pic.jpg" width="400" height="425" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Well, first of all I am really glad that you are so much interested about me :)
+							   and thanks for checking out my channel. I am a PhD student at IISER Pune. But Currently, I am 
+							   a Swiss Government Excellence Fellow at the University of Geneva (Département de Physique Théorique).
+							    I am also a visiting researcher at the Raman Research Institute in Bengaluru (Astronomy and Astrophysics Department), India 
+							</p>
 
 						</div>
 					</section>
