--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Sayan</strong>, and welcome to my personal blog page, where I try to talk about 
 									various topics
-							        in theoratical and observational cosmology at in a non-technical way</h2>
+							        in theoratical and observational cosmology in a non-technical way</h2>
 								<p>Cosmology is the study of the universe as a whole<br />
 								as a function of time and space.</p>
 							</header>
@@ -164,10 +164,9 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Do you have some suggestion or ideas about anything in the General Please leave a message.
+								You can also find me <a href="https://cosmology.unige.ch/users/sayan-saha" >here</a>
+							</p>
 
 							<form method="post" action="#">
 								<div class="row">
