--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 								<h2>Blogs</h2>
 							</header>
 
-							<p>The universe is amazingly simple. It is so smooth looks exactly the same everywhere and 
-								every direction, if you zoom out enough. Although If you really pay attention tt has some exotic irregularites
-							Which contains the information about the very early stages after the Big-Bang</p>
+							<p>The universe is amazingly simple. It looks exactly the same everywhere and 
+								every direction, if you zoom out enough. Although If you pay attention it has some exotic irregularites,
+							which contains the information about the very early stages after the Big-Bang</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -148,9 +148,9 @@
 							<a href="#" class="image"><img src="images/sayan_profile_pic.jpg" width="400" height="425" alt="" /></a>
 
 							<p>Well, first of all I am really glad that you are so much interested about me :)
-							   and thanks for checking out my channel. I am a PhD student at IISER Pune. But Currently, I am 
-							   a Swiss Government Excellence Fellow at the University of Geneva (Département de Physique Théorique).
-							    I am also a visiting researcher at the Raman Research Institute in Bengaluru (Astronomy and Astrophysics Department), India 
+							   and thanks for checking out my website. I am a PhD student at Indian Institute of Science Education and Research (IISER), Pune. 
+							   But Currently, I am a Swiss Government Excellence Fellow at the University of Geneva (Département de Physique Théorique).
+							   I am also a visiting researcher at the Raman Research Institute in Bengaluru (Astronomy and Astrophysics Department), India 
 							</p>
 
 						</div>
