--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Do you have some suggestion or ideas about anything in the General Please leave a message.
+							<p>Do you have some suggestion or ideas about anything in the general? Please leave a message.
 								You can also find me <a href="https://cosmology.unige.ch/users/sayan-saha" >here</a>
 							</p>
 
