--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<ul class="icons">
 								<li><a href="mailto:sayan.saha@students.iiserpune.ac.in" class="icon fa-envelope alt"><span class="label">Mail</span></a></li>
 								<li><a href="https://www.linkedin.com/in/sayan-saha-78400b139/" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://twitter.com/cosmo_louis" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+								<!--<li><a href="https://twitter.com/cosmo_louis" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>-->
 								<li><a href="https://github.com/s-Sayan" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://inspirehep.net/authors/2008786" class="icon fa-newspaper alt"><span class="label">Dribbble</span></a></li>
 							</ul>
