--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<title>Sayan Saha</title>
-		
-		<a href="https://www.flaticon.com/free-icons/universe" title="universe icons">Universe icons created by Freepik - Flaticon</a>				
+		<link rel = "icon" href = 
+		"https://www.flaticon.com/free-icon/galaxy_1534067?term=universe&page=1&position=4&origin=search&related_id=1534067" 
+				type = "image/x-icon">
 				<meta charset="utf-8" />
 				<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 				<link rel="stylesheet" href="assets/css/main.css" />
