--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<li><a href="#intro" class="active">Introduction</a></li>
 					<li><a href="#first">Research</a></li>
 					<li><a href="#second">Blogs</a></li>
-					<li><a href="#cta">CV</a></li>
+					<li><a href="#CV">CV</a></li>
 				</ul>
 			</nav>
 
