--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<header id="header" class="alt">
 				<span class="logo"><img src="images/pngwing.com.png" width="120" height="70" alt="Logo" /></span>
 				<h1>Sayan Saha</h1>
-				<p>a PhD student in Cosmology</p>
+				<p>a PhD candidate in Cosmology</p>
 			</header>
 
 			<!-- Nav -->
@@ -56,7 +56,7 @@
 							<header class="major">
 								<h2>Introduction</h2>
 							</header>
-							<p>Welcome to my personal webpage! Currently, I am a Swiss Government Excellence Fellow at the Department of Theoretical Physics, University of Geneva. I am a PhD candidate at the Indian Institute of Science Education and Research (IISER) Pune. I am also a visiting researcher at the Astronomy and Astrophysics department of Raman Research Institute (RRI), Bengaluru.</p>
+							<p>Welcome to my personal webpage! I am delighted to share that I am currently serving as a Swiss Government Excellence Fellow at the esteemed Department of Theoretical Physics, located at the University of Geneva. Additionally, I am pursuing my PhD at the renowned Indian Institute of Science Education and Research (IISER) Pune. As part of my academic journey, I also have the privilege of being a visiting researcher at the Astronomy and Astrophysics department of the esteemed Raman Research Institute (RRI) in Bengaluru.</p>
 							<p>My area of research is theoretical and observational cosmology. Specifically, I study the Cosmic Microwave Background (CMB), the most ancient light of the universe. The discovery of the CMB is one of the most amazing discoveries in recent science. Basically, we took a snapshot of the Big Bang.</p>
 							<ul class="icons">
 								<li><a href="mailto:sayan.saha@students.iiserpune.ac.in" class="icon fa-envelope alt"><span class="label">Mail</span></a></li>
