added Research section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="#intro" class="active">Introduction</a></li>
-					<li><a href="#first">Research</a></li>
+					<li><a href="#research">Research</a></li>
+					<li><a href="#pub">Publications</a></li>
 					<li><a href="#second">Blogs</a></li>
 					<li><a href="#CV">CV</a></li>
 				</ul>
@@ -57,7 +58,6 @@
 								<h2>Introduction</h2>
 							</header>
 							<p>Welcome to my personal webpage! I am delighted to share that I am currently serving as a Swiss Government Excellence Fellow at the esteemed Department of Theoretical Physics, located at the University of Geneva. Additionally, I am pursuing my PhD at the renowned Indian Institute of Science Education and Research (IISER) Pune. As part of my academic journey, I also have the privilege of being a visiting researcher at the Astronomy and Astrophysics department of the esteemed Raman Research Institute (RRI) in Bengaluru.</p>
-							<p>My area of research is theoretical and observational cosmology. Specifically, I study the Cosmic Microwave Background (CMB), the most ancient light of the universe. The discovery of the CMB is one of the most amazing discoveries in recent science. Basically, we took a snapshot of the Big Bang.</p>
 							<ul class="icons">
 								<li><a href="mailto:sayan.saha@students.iiserpune.ac.in" class="icon fa-envelope alt"><span class="label">Mail</span></a></li>
 								<li><a href="https://www.linkedin.com/in/sayan-saha-78400b139/" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
@@ -70,13 +70,33 @@
 				</section>
 
 				<!-- Research -->
-				<section id="first" class="main special">
+				<section id="research" class="main">
 					<header class="major">
 						<h2>Research</h2>
 					</header>
+					<span class="image right"><img src="images/Planck_history_of_Universe.jpg" alt="timeline" style="width:100%;height:100%;" /><figcaption style="text-align: center;">Credits: ESA</figcaption></span>
+							<p>Within the realm of scientific exploration, I am immersed in the captivating domain of theoretical and observational cosmology. With a profound passion for unraveling the mysteries of the universe, my research endeavors are primarily focused on the intricate intricacies of the Cosmic Microwave Background (CMB), an extraordinary phenomenon that encompasses the oldest traceable light originating from the earliest stages of the cosmos.</p>
+							<p>The discovery of the CMB represents a remarkable achievement in the annals of scientific history. To comprehend its significance, we must delve into the depths of cosmic evolution. According to the prevailing cosmological framework, the universe emerged from a singular cataclysmic event known as the Big Bang, roughly 13.8 billion years ago. At the inception of this colossal explosion, the universe was an incredibly hot, dense, and energetic state.</p>
+							<p>As the universe expanded and cooled down, approximately 380,000 years after the Big Bang, a momentous event occurred. Photons, the elementary particles of light, became decoupled from the primordial plasma that permeated the cosmos. These liberated photons journeyed across the vast expanse of the expanding universe, permeating the fabric of space itself. Today, we can still detect the remnants of this ancient radiation, manifesting as the CMB.</p>
+                            <p> The CMB is a faint cosmic glow that pervades the entire observable universe. It fills the vacuum of space, carrying imprints of the universe's early conditions and providing a tantalizing window into the primordial era. This relic radiation has undergone a dramatic redshift, stretching its original high-energy wavelengths into the microwave region of the electromagnetic spectrum.</p>
+							<p> To capture a snapshot of the CMB, scientists employ cutting-edge instruments and space-borne telescopes, meticulously mapping the sky with extraordinary precision. These observations enable us to acquire detailed measurements of the temperature fluctuations and polarization patterns within the CMB, which convey valuable insights into the structure, composition, and evolution of the universe.</p>
+							<p> Analyzing the subtle variations in the CMB allows cosmologists to probe fundamental questions about the cosmos, such as the age, geometry, and composition of the universe. It also sheds light on the formation and distribution of cosmic structures, such as galaxies, galaxy clusters, and dark matter.</p>
+							<span class="image right"><img src="images/Planck_CMB.jpg" alt="timeline" style="width:100%;height:100%;" /><figcaption style="text-align: center;">Credits: ESA</figcaption></span>
+
+							  
+							<p> By scrutinizing the CMB data in conjunction with theoretical models and computational simulations, we aim to refine our understanding of the early universe and its subsequent evolution. This intricate interplay between theory and observation allows us to construct more accurate cosmological frameworks and address fundamental enigmas, such as the nature of dark energy, the origin of cosmic inflation, and the ultimate fate of the universe. </p>
+							<p> In summary, my research endeavors are centered around the captivating field of theoretical and observational cosmology, with a specific focus on the exploration of the Cosmic Microwave Background. This extraordinary relic radiation, stemming from the Big Bang, provides us with a glimpse into the universe's primordial past and serves as a powerful tool for unraveling the profound mysteries that encompass the cosmos.</p>
+				</section>
+
+
+				<!-- Publications -->
+				<section id="pub" class="main special">
+					<header class="major">
+						<h2>Publications</h2>
+					</header>
 					<ul class="alt">
 						<li>
-							<span class="image right"><img src="images/CMB_dipole.png" alt="CMB Dipole" style="width:100%;height:100%;" /></span>
+							<span class="image right"><img src="images/smooth_theta_phi_rd50_NILC_SEVEM_SMICA_v2.png" alt="CMB Dipole" style="width:100%;height:100%;" /></span>
 							<p class="content">
 								<a href="https://arxiv.org/abs/2106.07666">
 									<span class="icon fa-newspaper"></span>
@@ -90,7 +110,7 @@
 
 					<ul class="alt">
 						<li>
-							<span class="image right"><img src="images/dm_halos.png" alt="Dark Matter Halos" style="width:100%;height:100%;" /></span>
+							<span class="image right"><img src="images/recon_MAP.gif" alt="Dark Matter Halos" style="width:700px;height:200px;" /></span>
 							<p class="content">
 								<a href="#">
 									<span class="icon fa-newspaper"></span>
