--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									<span class="icon fa-newspaper"></span>
 									Bayesian estimation of our local motion from the Planck-2018 CMB temperature map
 								</a><br>
-								<i><b>S. Saha</b>, S. Shaikh, S. Mukherjee, T. Souradeep, and B. D. Wandelt</i><br>
+								<i><b>S. Saha</b>, Shabbir Shaikh, Suvodip Mukherjee, Tarun Souradeep, and Benjamin D. Wandelt</i><br>
 								The motion of our reference frame can be inferred from the CMB Dipole in mK level. But if there is some contribution from the intrinsic dipole, we won't be able to discriminate between these two. So we infer the velocity from the neighboring mode correlation in the small-scale CMB. We jointly infer the 'a_{lm}' and the power spectrum in a Bayesian approach, where we explore the posterior distribution using a Hamiltonian sampler that we have developed.
 							</p>
 						</li>
