--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 					<ul class="alt">
 						<li>
-							<span class="image right"><img src="images/recon_MAP.gif" alt="Dark Matter Halos" style="width:400px;height:200px;" /></span>
+							<span class="image right"><img src="images/recon_MAP_copy.gif" alt="Dark Matter Halos" style="width:400px;height:200px;" /></span>
 							<p class="content">
 								<a href="https://arxiv.org/abs/2307.11711">
 									<span class="icon fa-newspaper"></span>
@@ -143,7 +143,7 @@
 								<h2>Curriculum vitae</h2>
 							</header>
 							<ul class="alt">
-								You will find my CV <a href="docs/SayanSaha_CV.pdf">here</a> (last update on June 2023).
+								You will find my CV <a href="docs/SayanSaha_CV.pdf">here</a> (last update on July 2023).
 							</ul>
 						</section>
 				</div>
