--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <img src="images_outreach/IMG_NCSC3.jpg" alt="National Children Science Congress Image 3" />
             </div>
             <div class="image-container">
-                <img src="images_outreach/IMG_NCSC4.jpg" alt="National Children Science Congress Image 4" />
+                <img src="./images_outreach/IMG_NCSC4.jpg" alt="National Children Science Congress Image 4" />
             </div>
         </div>
 
