--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <header class="major">
         <h2>Outreach</h2>
         <p>In addition to my research pursuits, I hold a deep passion for science outreach. Fostering an appreciation and understanding of science among school children in India is critically important. Engaging with these incredible young minds and kindling their interest in the scientific world bring me immense joy and satisfaction.</p>
-		<p>I had the honor of being invited as a judge for the National Children's Science Congress in Bengaluru, where I had the opportunity to assess the innovative science projects of our brilliant young minds and discuss my research with them.</p>
+		<p>I had the honor of being invited as a judge for the <a href="http://www.ncsc.co.in/" target="_blank">National Children's Science Congress</a> in Bengaluru, where I had the opportunity to assess the innovative science projects of our brilliant young minds and discuss my research with them.</p>
         <div class="image-row">
             <div class="image-container">
                 <img src="images_outreach/IMG_NCSC3.jpg" alt="National Children Science Congress Image 1" />
