--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
                 <img class="rounded" src="images_outreach/IMG_NCSC2.jpg" alt="National Children Science Congress Image 2" />
             </div>
         </div>
+		<p></p>
+
+		<p> I have also delivered an engaging talk titled 'The Universe in Your Pocket' at the Raman Research Institute’s outreach program for school children, using accessible language and illustrative visuals to inspire a passion for astronomy; the slides from this presentation are available upon request.</p>
 
     </header>
 </section>
