--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
 		<p></p>
 
 		<p> I have also delivered an engaging talk titled 'The Universe in Your Pocket' at the Raman Research Institute’s outreach program for school children, using accessible language and illustrative visuals to inspire a passion for astronomy; the slides from this presentation are available upon request.</p>
+		<div class="image-row">
+            <div class="image-container">
+                <img class="rounded" src="images_outreach/outreach1.jpg" alt="RRI Outreach 1" />
+            </div>
+            <div class="image-container">
+                <img class="rounded" src="images_outreach/outreach2.jpg" alt="RRI outreach 2" />
+            </div>
+        </div>
 
     </header>
 </section>
