--- a/index.html
+++ b/index.html
@@ -176,13 +176,6 @@
 	}
 </style>
 
-
-
-
-
-
-
-
 				<!-- Cosmo-Blogs -->
 				<section id="second" class="main special">
 					<header class="major">
@@ -192,7 +185,7 @@
 
 					<footer class="major">
 						<ul class="actions special">
-							<li><a href="https://s-sayan.github.io/blog/" class="button">Cosmo-Blogs</a></li>
+							<li><a href="https://s-sayan.github.io/blog/" class="button">Sayan's Cosmic Corner</a></li>
 						</ul>
 					</footer>
 				</section>
