--- a/index.html
+++ b/index.html
@@ -199,27 +199,32 @@
 								You will find my CV <a href="docs/SayanSaha_CV.pdf">here</a> (last update on July 2023).
 							</ul>
 						</section>
+					</section>
+					<!-- CV section -->
+					<section id="contact" class="main">
+						<header class="major">
+							<h2>Contact Information</h2>
+						</header>
+						<ul class="alt">
+					
+							<p class="address">
+								<i class="fas fa-map-marker-alt"></i>
+								Mailing Address:<br>
+								Office - L220, Astronomy & Astrophysics,<br>
+								Raman Research Institute,<br>
+								C. V. Raman Avenue, 5th Cross Road, Sadashivanagar,<br>
+								Near Mekhri Circle, Bengaluru, Karnataka 560080, India
+							</p>
+							<p class="email">
+								<i class="fas fa-envelope"></i>
+								Email:
+								<a href="mailto:sayan.saha@students.iiserpune.ac.in">sayan.saha@students.iiserpune.ac.in</a>
+							</p>
+						</ul>
+					</section>
 
-						<section id="contact" class="main">
-							<header class="major">
-								<h2>Contact Information</h2>
-							</header>
-							<div class="contact-details">
-								<p class="address">
-									<i class="fas fa-map-marker-alt"></i>
-									<strong>Mailing Address:</strong><br>
-									Office - L220, Astronomy & Astrophysics,<br>
-									Raman Research Institute,<br>
-									C. V. Raman Avenue, 5th Cross Road, Sadashivanagar,<br>
-									Near Mekhri Circle, Bengaluru, Karnataka 560080, India
-								</p>
-								<p class="email">
-									<i class="fas fa-envelope"></i>
-									<strong>Email:</strong>
-									<a href="mailto:sayan.saha@students.iiserpune.ac.in">sayan.saha@students.iiserpune.ac.in</a>
-								</p>
-							</div>
-						</section>
+
+
 						
 				</div>
 
