updated outreach, added IISF2024

--- a/index.html
+++ b/index.html
@@ -145,14 +145,16 @@
 		<p></p>
 
 		<p> I have also delivered an engaging talk titled 'The Universe in Your Pocket' at the Raman Research Institute’s outreach program for school children, using accessible language and illustrative visuals to inspire a passion for astronomy; the slides from this presentation are available upon request.</p>
+		<p> In January 2024, I had the privilege of being part of the RRI team at the India International Science Festival (IISF), held in Faridabad, Haryana. This event presented an extraordinary opportunity for us to engage with the general public, as well as school and college students, and to share the fascinating aspects of astrophysics and cosmology. Our efforts were recognized when RRI was honored with the 'Best Conceptual Pavilion' award, a testament to our team's dedication and innovative approach in making complex scientific concepts accessible and engaging. </p>
 		<div class="image-row">
             <div class="image-container">
                 <img class="rounded" src="images_outreach/outreach1.jpg" alt="RRI Outreach 1" />
             </div>
             <div class="image-container">
-                <img class="rounded" src="images_outreach/outreach2.jpg" alt="RRI outreach 2" />
+                <img class="rounded" src="images_outreach/IISF1.jpg" alt="RRI outreach 2" />
             </div>
         </div>
+
 
     </header>
 </section>
@@ -181,7 +183,7 @@
 				<section id="second" class="main special">
 					<header class="major">
 						<h2>Cosmo-Blogs</h2>
-						<p>In this blog channel, I share facts and findings in cosmology in a non-technical way. Give it a try, you might like it :)</p>
+						<p>Welcome to my blog channel, where I delve into the intriguing world of cosmology in a way that's accessible and enjoyable for everyone. Whether you're a science enthusiast or just casually curious, I strive to present facts and findings in a straightforward, non-technical manner. Why not give it a try? You might find yourself captivated by the wonders of the cosmos! :)</p>
 					</header>
 
 					<footer class="major">
