--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
 							<p>During my Ph.D., I also had the unique opportunity to serve as a <a href="https://cosmology.unige.ch/users/sayan-saha"target="_blank">Swiss Government Excellence Fellow</a> under the guidance of <a href="https://cosmology.unige.ch/users/julien-carron"target="_blank">Prof. Julien Carron</a> at the Department of Theoretical Physics, University of Geneva, where I worked on a segment of my thesis. Here, I share insights and details about my academic journey and research endeavors. I invite you to explore further for a comprehensive view of my work and experiences.</p>
 							<ul class="icons">
 								<li><a href="mailto:sayan.saha@students.iiserpune.ac.in" class="icon fa-envelope alt"><span class="label">Mail</span></a></li>
-								<li><a href="https://www.linkedin.com/in/sayan-saha-78400b139/" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/s-Sayan" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://inspirehep.net/authors/2008786" class="icon fa-newspaper alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://www.linkedin.com/in/sayan-saha-78400b139/" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.instagram.com/___sayan_s/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 							</ul>
 						</div>
 						<span class="image"><img src="images/sayan_profile_pic_1.jpg" alt="Profile Picture" /></span>
@@ -101,7 +102,7 @@
 
 					<ul class="alt">
 						<li>
-							<span class="image right"><img src="images/recon_MAP_copy.gif" alt="Dark Matter Halos" style="width:400px;height:200px;" /></span>
+							<span class="image right"><img src="images/forcast_snr_ver2.pdf" alt="Dark Matter Halos" style="width:400px;height:200px;" /></span>
 							<p class="content">
 								<a href="https://arxiv.org/abs/2307.11711">
 									<span class="icon fa-newspaper"></span>
